complected message api part 1
