# Routes/messageReoute.js
@@ -1,20 +1,24 @@
 import express from 'express';
 import { 
-    getAllContacts 
+    getAllContacts, 
+    getChatParameters, 
+    getMessagesByUserId,
+    sendMessage
 } from '../Controllers/messageController.js';
+import { protect } from '../Middleware/authMiddleware.js';
 
 const MessageRoute = express.Router();
 
 
 // GET Methods
-MessageRoute.get('/contacts', getAllContacts);
+MessageRoute.get('/contacts',protect , getAllContacts);
 
-// MessageRoute.get('/messages',);
+MessageRoute.get('/chat', protect, getChatParameters);
 
-// MessageRoute.get(':id',);
+MessageRoute.get('/:id',protect , getMessagesByUserId);
 
 // POST Methods
-
+MessageRoute.post('/send/:id', protect, sendMessage);
 
 // PUT Methods
 
